# oreilly-langgraph

./: .marimo.toml  MY-README.md.md  README.md  SETUP.md  aaaa.txt  check_imports.py  current_env.txt  main.py  my-python-files.txt  pyproject.toml
docs/Win 11 & WSL2 GPU Infrastructure/: Section 00- Summary WSL2 GPU Infrastructure with Docker Swarm Setup Guide.md  Section 01 - 🚀 WSL2 GPU Infrastructure with Docker Swarm Setup Guide.md  Section 02 - 🚀 WSL2 GPU Infrastructure with Docker Swarm Setup Guide.md  Section 03 - 🚀 WSL2 GPU Infrastructure with Docker Swarm Setup Guide.md  Section 04 - 🚀 WSL2 GPU Infrastructure with Docker Swarm Setup Guide.md  Section 05 - 🚀 WSL2 GPU Infrastructure with Docker Swarm Setup Guide.md  Section 05A - 🚀 WSL2 GPU Infrastructure with Docker Swarm Setup Guide.md  Section 05B - 🚀 WSL2 GPU Infrastructure with Docker Swarm Setup Guide.md  Section 05C - 🚀 WSL2 GPU Infrastructure with Docker Swarm Setup Guide.md
docs/marimo-Utility Code & Templating/: Details of the Extensible Library Structure implemetation.md.md  Summary of the Extensible Library Structure.md
docs/my-notes/: 🚀 Parallel Node Synchronization - A Complete Guide.md
marimo-langgraph/: 1.1-langgraph-state-as-messages.py  1.2-langgraph-llm-patterns.py  1.3-langgraph-using-tools.py
marimo-notebooks/: 1.0-introduction-to-simple-graphs.py
notebook/: 1.0-introduction-to-simple-graphs.ipynb  1.1-langgraph-state-as-messages.ipynb  rag-agent-with-grading-relevance-of-documents.py
notebook-langgraph/: 1.2-langgraph-llm-patterns.ipynb
notebooks/: 1.0-introduction-to-simple-graphs.ipynb  2.0-basic-react-agent.ipynb  3.0-basic-rag-agent.ipynb  4.0-local-agent-llama32.ipynb
requirements/: requirements.in  requirements.txt
(+3 files in other folders)
