[project]
name = "oreilly-langgraph"
version = "0.1.0"
description = "LangGraph development project with O'Reilly tutorials and examples"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.4.10",
    "marimo>=0.14.7",
    "quarto>=0.1.0",
    "langchain>=0.3.0",
    "openai>=1.0.0",
    "anthropic>=0.35.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oreilly_langgraph"]

[project.scripts]
oreilly-langgraph = "oreilly_langgraph.main:main"

# Ruff configuration (replaces flake8, isort, and more)
[tool.ruff]
target-version = "py313"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

# MyPy configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
